  EntityService, error handling improved
  HttpEntityConnection now initializes Entities and EntityConditions in constructor
  HttpEntityConnectionProvider and RemoteEntityConnectionProvider.initializeEntities() now uses getConnection()
  NumberDocumentFilter now suppresses NullPointerException during setCaret() :(
  UiUtil now uses separate JFileChooser instances for open and save actions
  Copyright update mistake fixed
  EntityTablePanel, UiUtil.ExceptionDialog, replaced new Control() with Controls.control()
  SQLiteDatabase added, very preliminary
  EntityTablePanel.getCopyCellControl() and getCopyTableWithHeaderControl() now protected instead of private
  User.password is now a character array instead of String
  User.readObject() is now backwards compatible, as in, can read User instances from previous versions
  Entities.orderBy() now static
  H2Database bug fixed, did not guard against a null initScript value
  EntityTableConditionPanel bug fixed, addFocusGainedListener() assumed advancedSearchPanel was a AbstractTableColumnSyncPanel instance
  Entities.getModifiedProperty() renamed to getModifiedColumnProperties(), now returns a collection containing all modified column properties
  Entities instances renamed to domain throughout
  AbstractEntityConnectionProvider.setUser() no longer returns if the usernames match, since the password could have changed
  HttpEntityConnection, now uses BasicAuthCache for basic authentication instead of manually adding header
  HttpEntityConnection, https option added
  HttpServer, https option added
  EntityServletServerTest now uses BasicAuthCache for basic authentication
  EntityServletServerTest and HttpEntityConnectionTest now use https without host verification
  Configuration.value() removed, doubleValue() and longValue() added
  Configuration.ConfigurationValue now abstract, public, subclasses refactored
  Server.ServerInfo.getLocale() and getTimeZone() added